# ticktock

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  noxfile.py  requirements-dev.txt  setup.cfg  setup.py  sitemap.xml
.github/workflows/: lint.yml
clocks/: index.html
collection/: index.html
customize/: index.html
docs/: advanced.md  clocks.md  collection.md  customize.md  index.md  rendering.md  using_clocks.md
rendering/: index.html
scripts/: ci_tests.sh  lint-apply.sh  lint.sh
search/: search_index.json
tests/: conftest.py  test_collection.py  test_contextmanager.py  test_decorator.py  test_format_ns.py  test_render.py  test_tick.py  test_timing.py
tests/testdata/: file_rendering.txt  file_rendering_custom.txt  file_rendering_custom_tick_format.txt  file_rendering_long.txt  file_rendering_no_update.txt
ticktock/: __init__.py  clocks.py  collection.py  config.py  data.py  renderers.py  std.py  timer.py  timers.py  utils.py
using_clocks/: index.html
