[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[metadata]
name = py-ticktock
description = Simple Python code metering library.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
project_urls = 
	Bug Tracker = https://github.com/victorbenichoux/ticktock/issues
	Documentation = https://victorbenichoux.github.io/tickto/
	Source Code = https://github.com/victorbenichoux/ticktock

[options]
zip_safe = False
packages = find:

[options.packages.find]
where = .
exclude = 
	tests

[options.package_data]
ticktock = py.typed

[tool:pytest]
addopts = 
	--strict
	--verbose
	--tb=native
	-vv
	--failed-first
	--disable-warnings
	--durations 10
	--color=yes
	tests

[tool:isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203

[coverage:run]
source = ticktock

[coverage:report]
fail_under = 90
precision = 2

[mypy]
ignore_missing_imports = True

[bumpversion:file:ticktock/__init__.py]

[bumpversion:file:setup.py]
